--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="container">
             <nav class="menu_desktop">
                 <ul class="menu">
-                    <li class="menu_item active"><a href="index.html">Home</a></li>
+                    <li class="menu_item active"><a href="#">Home</a></li>
                     <li class="menu_item"><a href="#about">About Us</a></li>
                     <li class="menu_item"><a href="#team">Team</a></li>
                     <li class="menu_item"><a href="index.html"><img src="img/logo.png" alt="Logo" class="logo"></a></li>
@@ -22,10 +22,12 @@
                 </ul>
             </nav>
             <nav class="menu_mobile">
-                <a href="index.html"><img src="img/logo.png" alt="Logo" class="logo"></a>
-                <div class="menu_burger"></div>
+                <div class="menu_inner">
+                    <a href="index.html"><img src="img/logo.png" alt="Logo" class="logo"></a>
+                    <div class="menu_burger"><span>toggle menu</span></div>
+                </div>
                 <ul class="menu">
-                    <li class="menu_item"><a href="index.html"></a></li>
+                    <li class="menu_item"><a href="#"></a></li>
                     <li class="menu_item active">Home</li>
                     <li class="menu_item"><a href="#about">About Us</a></li>
                     <li class="menu_item"><a href="#team">Team</a></li>
@@ -167,5 +169,8 @@
             </div>
         </div>
     </footer>
+
+    <script src="js/jquery-3.7.1.min.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
